# SecureVault

./: .gitignore  CMakeLists.txt  input.txt
include/: crypto.h  fileio.h  utils.h
include/fs/: file.h
src/: crypto.c  fileio.c  main.c  utils.c
src/crypto/: crypto.c
src/fs/: file.c
